Fixed layout issues, and hover/active styles for WeaponTeaser

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
 body {
   /* padding: 10px; */
   background: #1f2533;
