--- a/src/components/WeaponTeaser.css
+++ b/src/components/WeaponTeaser.css
@@ -7,4 +7,5 @@
 .weapon-teaser:hover {
   /* border-left-color: #6d7da1; */
   /* border-color: #6d7da1; */
+  background: #1f2533;
 }
